syntax = "proto2";
package configFile;

message	Database {
	required string	host = 1 [default = "localhost"];
	required string database = 2 [default = "osirose"];
	required string user = 3 [default = "root"];
	required string password = 4 [default = ""];
	required int32	port = 5 [default = 3306];
}

message	Server {
	required int32	id = 1 [default = 0];
	required string	ip = 2 [default = "127.0.0.1"];
	required int32	accessLevel = 3 [default = 100];
	required int32	parentId = 4 [default = 0];
	required int32	maxConnections = 5 [default = 100];
	required bool	useThreads = 6 [default = true];
	required int32	maxThreads = 7 [default = 512];
	required int32	mode = 8 [default = 0];
}

message LoginServer {
	required int32 iscPort = 1 [default = 29010];
}

message CharServer {
	required string worldName = 1 [default = "osIROSE"];
	required string loginIP = 2 [default = "127.0.0.1"];
	required int32 loginIscPort = 3 [default = 29010];
	required int32 iscPort = 4 [default = 29110];
}

message MapServer {
	required string channelName = 1 [default = "Athena"];
	required string charIP = 2 [default = "127.0.0.1"];
	required int32 charIscPort = 3 [default = 29010];
	required int32 iscPort = 4 [default = 29210];
}

message	Configuration {
	required Database database = 1;
	required Server serverdata = 2;
}
